--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,8 +1,16 @@
 apply plugin: 'com.android.library'
 
+ext {
+    projectName = "FCAnnotation"
+}
+
+apply from: "../bintray.gradle"
+
+group="fc.annotation"
+version="0.0.1"
+
 android {
     compileSdkVersion 28
-
 
     defaultConfig {
         minSdkVersion 17
@@ -17,7 +25,28 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
 
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    options.encoding = "utf-8"
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+//    archives javadocJar
+    archives sourcesJar
 }
 
 dependencies {
