--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -7,7 +7,7 @@ ext {
 apply from: "../bintray.gradle"
 
 group="fc.annotation"
-version="0.0.1"
+version="0.0.5"
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.java.srcDirs
@@ -35,5 +35,6 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':annotation')
+//    implementation project(':annotation')
+    implementation 'fc.annotation:annotation:0.0.3'
 }
